--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,16 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  
+  <style>
+    .gist {
+      max-width:350px;
+   overflow:auto;
+    }
+
+    .gist .blob-wrapper.data {
+      max-height:200px;
+      overflow:auto;
+    }
+  </style>
 </head>
