--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
             {% endif %}
             {% if my_page.menu == 'main2' %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}
+          <a>{{ my_page.title }}
             <select>
             <option value ="volvo">Volvo</option>
             <option value ="saab">Saab</option>
