--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,9 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
             {% endif %}
             {% if my_page.menu == 'main2' %}
-          <a>
-            <select>{{ my_page.title }}
-            <option value ="volvo">Volvo</option>
+          <a>{{ my_page.title }}
+            <select>
+            <option class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</option>
             <option value ="saab">Saab</option>
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
