--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             {% if my_page.menu == 'main2' %}
           <a>{{ my_page.title }}
             <select>
-            <option class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</option>
+            <option ><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></option>
             <option value ="saab">Saab</option>
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
