--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,8 @@
             {% if my_page.menu == 'main2' %}
           <a>{{ my_page.title }}
             <select>
-            <option value="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</option>
+            <option onchange="javascript:if (this.options[this.selectedIndex].value != '')
+ window.open({{ my_page.url | prepend: site.baseurl }});this.options[0].selected;">{{ my_page.title }}</option>
             <option value ="saab">Saab</option>
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
