--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
             <select onchange="javascript:if (this.options[this.selectedIndex].value != '')
  window.open(this.options[this.selectedIndex].value);this.options[0].selected;">
             <option value="1">{{ my_page.title }}</option>
-            <option value="saab">Saab</option>
+            <option value="0">{{ my_page.title }}</option>
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
             </select>          
