--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,9 @@
             {% endif %}
           {% endif %}
         {% endfor %}
-        <a>Extended Publications
+        <a>
             <select onchange="javascript:if (this.options[this.selectedIndex].value != '') window.open(this.options[this.selectedIndex].value);this.options[0].selected;">
+                <option value="">Extended Publications</option>
                 <option value="https://usc-bbdl.github.io/fulllengthpeerreviewedabstracts/">Full-Length Peer-Reviewed Abstracts</option>
                 <option value="https://usc-bbdl.github.io/peerreviewedabstracts/">Peer-Reviewed Abstracts</option>
                 <option value="https://usc-bbdl.github.io/abstracts/">Abstracts</option>
