--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,9 +27,9 @@
                 <option value="https://usc-bbdl.github.io/fulllengthpeerreviewedabstracts/">Full-Length Peer-Reviewed Abstracts</option>
                 <option value="https://usc-bbdl.github.io/peerreviewedabstracts/">Peer-Reviewed Abstracts</option>
                 <option value="https://usc-bbdl.github.io/abstracts/">Abstracts</option>
-                <!-- <option value="https://usc-bbdl.github.io/bookchpt/">Book chapters</option>
-                <option value="https://usc-bbdl.github.io/invitedsymposia/">Invited symposia</option>
-                <option value="https://usc-bbdl.github.io/dissertation_these/">Dissertations & Theses</option> -->
+                <option value="https://usc-bbdl.github.io/bookchpt/">Book Chapters</option>
+                <option value="https://usc-bbdl.github.io/invitedsymposia/">Invited Symposia</option>
+                <option value="https://usc-bbdl.github.io/dissertation_theses/">Dissertations & Theses</option>
             </select>          
           </a>
       </div>
