--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -70,7 +70,7 @@
             }
         }
 
-        .trigger {
+        .trigger select{
             clear: both;
             display: none;
             border: 0 !important;        /*Removes border*/
