--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,7 +73,7 @@
         .trigger select{
             clear: both;
             display: none;
-            border: 0 !important;        /*Removes border*/
+            border: 0;        /*Removes border*/
             -webkit-appearance: none;        /*Removes default chrome and safari style*/
             -moz-appearance: none;          /* Removes Default Firefox style*/
         }
