--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -76,7 +76,7 @@
         }
 
         .trigger select {
-             border: 0 !important;  /*Removes border*/
+             border: 0;  /*Removes border*/
             -webkit-appearance: none;  /*Removes default chrome and safari style*/
             -moz-appearance: none; /* Removes Default Firefox style*/
         }
