--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           {% endif %}
         {% endfor %}
         <a>
-            <select onchange="javascript:if (this.options[this.selectedIndex].value != '') window.location.href=this.options[this.selectedIndex].value;this.options[0].selected;" style="width:200px;font-size:15px;background:transparent;border:none;" >
+            <select onchange="javascript:if (this.options[this.selectedIndex].value != '') window.location.href=this.options[this.selectedIndex].value;this.options[0].selected;" style="width:200px;font-size:16px;background:transparent;border:none;-webkit-appearance:none;" >
                 <option value="">Extended Publications</option>
                 <option value="https://usc-bbdl.github.io/fulllengthpeerreviewedabstracts/">Full-Length Peer-Reviewed Abstracts</option>
                 <option value="https://usc-bbdl.github.io/peerreviewedabstracts/">Peer-Reviewed Abstracts</option>
