--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -200,13 +200,18 @@
     font-size: 24px;
 }
 
-p{background:#666;}
 .parent{
     margin-left: -20px;
 }
 .column{
     float: left;
     width: 25%;
+    padding-left: 20px;
+    box-sizing: border-box;
+}
+.column2{
+    float: left;
+    width: 50%;
     padding-left: 20px;
     box-sizing: border-box;
 }
