--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,12 +208,14 @@
     float: left;
     width: 25%;
     padding-left: 20px;
+    padding-top: 20px;
     box-sizing: border-box;
 }
 .column2{
     float: left;
     width: 50%;
     padding-left: 20px;
+    padding-top: 20px;
     box-sizing: border-box;
 }
 
