--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,17 +17,17 @@
 }
 
 .flex-item {
-  background: tomato;
+//   background: tomato;
   padding: 5px;
   width: 200px;
   height: 150px;
   margin-top: 10px;
   
   line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
+//   color: white;
+//   font-weight: bold;
+//   font-size: 3em;
+//   text-align: center;
 }
 
 /**
