--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,11 +19,11 @@
 .flex-item {
 //   background: tomato;
   padding: 5px;
-  width: 200px;
-  height: 150px;
+  width: 180px;
+//   height: 150px;
   margin-top: 10px;
   
-  line-height: 150px;
+//   line-height: 150px;
 //   color: white;
 //   font-weight: bold;
 //   font-size: 3em;
