--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,9 +13,8 @@
   display: flex;
   
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
 
-  flex-direction: row;
 }
 
 .flex-item {
