--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,7 +19,7 @@
 
 .flex-item {
   padding: 5px;
-  width: 150px;
+  width: 200px;
   margin-top: 10px;
 }
 
@@ -27,6 +27,7 @@
   padding: 5px;
   width: 300px;
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 /**
