--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="valero.png" style="align:center"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="img/valero.png" style="align:center"></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
