attempt fix path for global

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="img/valero.png" style="width:100%"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="./img/valero.png" style="width:100%"></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -30,7 +30,7 @@
                 <option value="https://usc-bbdl.github.io/bookchpt/">Book Chapters</option>
                 <option value="https://usc-bbdl.github.io/invitedsymposia/">Invited Symposia</option>
                 <option value="https://usc-bbdl.github.io/dissertation_theses/">Dissertations & Theses</option>
-            </select>          
+            </select>
           </a>
       </div>
     </nav>
