added more specific path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="usc-bbdl.github.io/img/valeroLab.png" style="width:100%"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="http://usc-bbdl.github.io/img/valeroLab.png" style="width:100%"></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
