spacing and sizing for VL logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper" style="margin-top:20px;">
 
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="https://usc-bbdl.github.io/img/valeroLab.png" style="width:50%, margin-top:20px"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="https://usc-bbdl.github.io/img/valeroLab.png" style="max-width:50%"></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
