--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: "System", Helvetica, Arial, sans-serif;
-$base-font-size:   10px;
+$base-font-family: "chaparral-pro-caption", Helvetica, Arial, sans-serif;
+$base-font-size:   14px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
