--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,13 +5,13 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  
+
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  
+
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
 
@@ -57,7 +57,7 @@
 }
 
 .site-nav {
-    float: right;
+    float: left;
     line-height: 56px;
 
     .menu-icon {
@@ -302,12 +302,12 @@
  */
  .hideContent {
     overflow: hidden;
-    
-   
+
+
 }
 
 .showContent {
-    
+
     height: auto;
 }
 .showContent{
@@ -315,7 +315,7 @@
 }
 
 h1 {
-    font-size: 20px;        
+    font-size: 20px;
 }
 p {
     padding: 20px 0;
