--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -319,6 +319,9 @@ h1 {
 }
 p {
     padding: 20px 0;
+    font-family: "chaparral-pro-caption",serif;
+    font-style: normal;
+    font-weight: 300;
 }
 .show-more {
     padding: 20px 0;
