--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "chaparral-pro-caption", Helvetica, Arial, sans-serif;
+$base-font-family: "chaparral-pro-caption", serif;
 $base-font-size:   14px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
