typekit expansion to about page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 
 <!-- TypeKit -->
   <script src="https://use.typekit.net/hgo4odf.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <script>try{Typekit.load({ async: true });console.log('loaded');}catch(e){}</script>
 <!-- TypeKit -->
 
 
