add end tag to script

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
 </script>
 
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.min.js"> </script>
+
   <!-- TypeKit -->
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
