--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -75,7 +75,7 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
+        // position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
         background-color: $background-color;
