--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,6 +23,8 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
+    max-width:100%;
+    overflow-x: hidden;
 }
 
 
